enhancement(#340): fixed new creation of memory blocks