@@ -50,38 +50,30 @@ public class MemoryBlockGenerationService {
         List<Trip> allTripsInRange = this.tripJdbcService.findByUserAndTimeOverlap(user, startDate, endDate);
         
         // Step 1: Data Pre-processing & Filtering
-        ProcessedVisit accommodation = findAccommodation(allVisitsInRange);
+        Optional<ProcessedVisit> accommodation = findAccommodation(allVisitsInRange);
         
         // Find first and last accommodation visits
-        Instant firstAccommodationArrival = null;
-        Instant lastAccommodationDeparture = null;
+        Instant firstAccommodationArrival = accommodation.flatMap(p -> allVisitsInRange.stream()
+                        .filter(visit -> visit.getPlace().getId().equals(p.getPlace().getId()))
+                        .min(Comparator.comparing(ProcessedVisit::getStartTime)))
+                        .map(ProcessedVisit::getStartTime).orElse(null);
+        Instant lastAccommodationDeparture = accommodation.flatMap(p -> allVisitsInRange.stream()
+                        .filter(visit -> visit.getPlace().getId().equals(p.getPlace().getId()))
+                        .max(Comparator.comparing(ProcessedVisit::getStartTime)))
+                        .map(ProcessedVisit::getStartTime).orElse(null);
+
+        List<ProcessedVisit> filteredVisits = accommodation.map(a -> filterVisits(allVisitsInRange, a)).orElse(allVisitsInRange);
         
-        if (accommodation != null) {
-            Long accommodationPlaceId = accommodation.getPlace().getId();
-            List<ProcessedVisit> accommodationVisits = allVisitsInRange.stream()
-                .filter(visit -> visit.getPlace().getId().equals(accommodationPlaceId))
-                .sorted(Comparator.comparing(ProcessedVisit::getStartTime))
-                .collect(Collectors.toList());
-            
-            if (!accommodationVisits.isEmpty()) {
-                firstAccommodationArrival = accommodationVisits.get(0).getStartTime();
-                lastAccommodationDeparture = accommodationVisits.get(accommodationVisits.size() - 1).getEndTime();
-            }
-        }
-        
-        List<ProcessedVisit> filteredVisits = filterVisits(allVisitsInRange, accommodation);
-        
-        log.info("Found {} visits after filtering (accommodation: {})", filteredVisits.size(), 
-                accommodation != null ? accommodation.getPlace().getName() : "none");
+        log.info("Found {} visits after filtering (accommodation: {})", filteredVisits.size(), accommodation.map(a -> a.getPlace().getName()).orElse("none"));
         
         // Step 3: Scoring & Identifying "Interesting" Visits
-        List<ScoredVisit> scoredVisits = scoreVisits(filteredVisits, accommodation);
+        List<ScoredVisit> scoredVisits = scoreVisits(filteredVisits, accommodation.orElse(null));
         
         // Sort by score descending
         scoredVisits.sort(Comparator.comparingDouble(ScoredVisit::getScore).reversed());
         
         log.info("Scored {} visits, top score: {}", scoredVisits.size(), 
-                scoredVisits.isEmpty() ? 0 : scoredVisits.get(0).getScore());
+                scoredVisits.isEmpty() ? 0 : scoredVisits.getFirst().getScore());
         
         // Step 4: Clustering & Creating a Narrative
         List<VisitCluster> clusters = clusterVisits(scoredVisits);
@@ -93,7 +85,7 @@ public class MemoryBlockGenerationService {
         
         // Add introduction text block
         if (!clusters.isEmpty()) {
-            String introText = generateIntroductionText(memory, clusters, accommodation);
+            String introText = generateIntroductionText(memory, clusters, accommodation.orElse(null));
             MemoryBlockText introBlock = new MemoryBlockText(null, "Your Journey", introText);
             blockParts.add(introBlock);
         }
@@ -104,12 +96,12 @@ public class MemoryBlockGenerationService {
                 .filter(trip -> trip.getEndTime() != null && !trip.getEndTime().isAfter(firstAccommodationArrival))
                 .filter(trip -> trip.getStartTime() != null && !trip.getStartTime().isBefore(startDate))
                 .sorted(Comparator.comparing(Trip::getStartTime))
-                .collect(Collectors.toList());
+                .toList();
             
             if (!tripsToAccommodation.isEmpty()) {
                 MemoryBlockText travelToText = new MemoryBlockText(
                     null, 
-                    "Journey to " + (accommodation != null ? accommodation.getPlace().getName() : "Destination"),
+                    "Journey to " + accommodation.map(a -> a.getPlace().getName()).orElse("Destination"),
                     "Your journey began with travel to your accommodation."
                 );
                 blockParts.add(travelToText);
@@ -154,13 +146,13 @@ public class MemoryBlockGenerationService {
                 .filter(trip -> trip.getStartTime() != null && !trip.getStartTime().isBefore(lastAccommodationDeparture))
                 .filter(trip -> trip.getEndTime() != null && !trip.getEndTime().isAfter(endDate))
                 .sorted(Comparator.comparing(Trip::getStartTime))
-                .collect(Collectors.toList());
+                .toList();
             
             if (!tripsFromAccommodation.isEmpty()) {
                 MemoryBlockText travelFromText = new MemoryBlockText(
                     null, 
                     "Journey Home",
-                    "Your journey concluded with travel back home from " + (accommodation != null ? accommodation.getPlace().getName() : "your accommodation") + "."
+                    "Your journey concluded with travel back home from " + accommodation.map(a -> a.getPlace().getName()).orElse("your accommodation") + "."
                 );
                 blockParts.add(travelFromText);
                 
@@ -367,7 +359,7 @@ public class MemoryBlockGenerationService {
     /**
      * Step 1: Find accommodation by analyzing visits during sleeping hours (22:00 - 06:00)
      */
-    private ProcessedVisit findAccommodation(List<ProcessedVisit> visits) {
+    private Optional<ProcessedVisit> findAccommodation(List<ProcessedVisit> visits) {
         Map<Long, Long> sleepingHoursDuration = new HashMap<>();
         
         for (ProcessedVisit visit : visits) {
@@ -381,8 +373,7 @@ public class MemoryBlockGenerationService {
             .max(Map.Entry.comparingByValue())
             .flatMap(entry -> visits.stream()
                 .filter(visit -> visit.getPlace().getId().equals(entry.getKey()))
-                .findFirst())
-            .orElse(null);
+                .findFirst());
     }
     
     private long calculateSleepingHoursDuration(ProcessedVisit visit) {
@@ -425,7 +416,7 @@ public class MemoryBlockGenerationService {
         return visits.stream()
             .filter(visit -> {
                 // Remove accommodation stays
-                if (accommodationPlaceId != null && visit.getPlace().getId().equals(accommodationPlaceId)) {
+                if (visit.getPlace().getId().equals(accommodationPlaceId)) {
                     return false;
                 }
                 
